@@ -1,3 +1,9 @@
+2007-10-24  Albrecht Dreß
+
+	* src/balsa-icons.c:
+	* src/balsa-message.c:
+	* src/balsa-print-object-text.c: More balsa Tangofication.
+
 2007-10-23  Albrecht Dreß
 
 	* configure.in:
